--- a/Angular2/index.html
+++ b/Angular2/index.html
@@ -19,6 +19,7 @@
 
         <script src="js/controller.js"></script>
         <script src="js/controllerFormulario.js"></script>
+        <script src="js/detalhesController.js"></script>
 
         <script src="js/contatosAPIService.js"></script>
         <script src="js/operadorasAPIService.js"></script>
@@ -29,7 +30,24 @@
     </head>
 
     <body>
+        <div class="container-fluid">
+            <!--<div class="container">
+                <div class="col-md-4 col-md-offset-4">
+                    <ui-accordions>
+                        <ui-accordion title="Accordion 1">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget nulla vitae velit dignissim tristique sit amet et ex. Maecenas hendrerit metus est, id viverra purus suscipit eu. Curabitur rhoncus diam id sodales fermentum. Integer scelerisque blandit lobortis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin maximus velit eget mollis rhoncus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                        </ui-accordion>
+
+                        <ui-accordion title="Accordion 2">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget nulla vitae velit dignissim tristique sit amet et ex. Maecenas hendrerit metus est, id viverra purus suscipit eu. Curabitur rhoncus diam id sodales fermentum. Integer scelerisque blandit lobortis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin maximus velit eget mollis rhoncus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                        </ui-accordion>
+                    </ui-accordions>
+                </div>
+            </div>-->
+        </div>
+
         <div ng-view></div>
+
         <div ng-include="'footer.html'"></div>
     </body>
 </html>
